# qworldparser

./: .gitignore  CMakeLists.txt  README.md
examples/: speed_comparison_float_double.txt
scripts/: genplotv2.py  genplotv3.py  plot_heightmap_0_0.gpl  plot_heightmap_full.gpl  plot_heightmap_triangulation.gpl  plot_heightmap_triangulation_2d.gpl  plottriangles.gpl
src/: CMakeLists.txt  delaunay.hpp  edge.hpp  heightdata.cpp  heightdata.h  heightmapscatterplot.cpp  heightmapscatterplot.hpp  main.cpp  osmparser.cpp  osmparser.h  point.hpp  qworldparser.cpp  qworldparser.h  qworldparser.ui  srtmparser.cpp  srtmparser.h  triangle.hpp
ut/: CMakeLists.txt  delaunaytest.cpp  edgetest.cpp  main.cpp  pointtest.cpp  triangletest.cpp
